// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update should update all: completed false 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
    "2": Object {
      "completed": false,
      "id": 2,
      "title": "todo 2",
    },
  },
  "ids": Array [
    1,
    2,
  ],
}
`;

exports[`update should update all: completed true 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": true,
      "id": 1,
      "title": "todo 1",
    },
    "2": Object {
      "completed": true,
      "id": 2,
      "title": "todo 2",
    },
  },
  "ids": Array [
    1,
    2,
  ],
}
`;

exports[`update should update by callback: completed false 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
  },
  "ids": Array [
    1,
  ],
}
`;

exports[`update should update by callback: completed true 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": true,
      "id": 1,
      "title": "todo 1",
    },
  },
  "ids": Array [
    1,
  ],
}
`;

exports[`update should update by predicate: completed false 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
    "2": Object {
      "completed": false,
      "id": 2,
      "title": "todo 2",
    },
  },
  "ids": Array [
    1,
    2,
  ],
}
`;

exports[`update should update by predicate: completed true 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": true,
      "id": 1,
      "title": "todo 1",
    },
    "2": Object {
      "completed": false,
      "id": 2,
      "title": "todo 2",
    },
  },
  "ids": Array [
    1,
    2,
  ],
}
`;

exports[`update should update multiple entities: multi completed false 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
    "2": Object {
      "completed": false,
      "id": 2,
      "title": "todo 2",
    },
  },
  "ids": Array [
    1,
    2,
  ],
}
`;

exports[`update should update multiple entities: multi completed true 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": true,
      "id": 1,
      "title": "todo 1",
    },
    "2": Object {
      "completed": true,
      "id": 2,
      "title": "todo 2",
    },
  },
  "ids": Array [
    1,
    2,
  ],
}
`;

exports[`update should update one entity: completed false 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
  },
  "ids": Array [
    1,
  ],
}
`;

exports[`update should update one entity: completed true 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": true,
      "id": 1,
      "title": "todo 1",
    },
  },
  "ids": Array [
    1,
  ],
}
`;

exports[`update should work with ref update all: open false 1`] = `
Object {
  "UIEntities": Object {
    "1": Object {
      "id": 1,
      "open": false,
    },
    "2": Object {
      "id": 2,
      "open": false,
    },
  },
  "UIIds": Array [
    1,
    2,
  ],
}
`;

exports[`update should work with ref update all: open true 1`] = `
Object {
  "UIEntities": Object {
    "1": Object {
      "id": 1,
      "open": true,
    },
    "2": Object {
      "id": 2,
      "open": true,
    },
  },
  "UIIds": Array [
    1,
    2,
  ],
}
`;

exports[`update should work with ref: open false 1`] = `
Object {
  "UIEntities": Object {
    "1": Object {
      "id": 1,
      "open": false,
    },
    "2": Object {
      "id": 2,
      "open": false,
    },
  },
  "UIIds": Array [
    1,
    2,
  ],
}
`;

exports[`update should work with ref: open true 1`] = `
Object {
  "UIEntities": Object {
    "1": Object {
      "id": 1,
      "open": true,
    },
    "2": Object {
      "id": 2,
      "open": false,
    },
  },
  "UIIds": Array [
    1,
    2,
  ],
}
`;
